# cookiecutter-uv

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  renovate.json  sitemap.xml  test_all.sh  test_template.sh  tox.ini
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
cookiecutter_uv/: cli.py
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: linting.md  makefile.md  tox.md
features/cicd/: index.html
features/codecov/: index.html
features/devcontainer/: index.html
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/publishing/: index.html
features/pytest/: index.html
features/tox/: index.html
features/uv/: index.html
hooks/: post_gen_project.py
prompt_arguments/: index.html
search/: search_index.json
tests/: test_cookiecutter.py
tutorial/: index.html
{{cookiecutter.project_name}}/: .dockerignore  .env.azure.schema  .env.schema  .gitignore  Dockerfile  LICENSE_APACHE  LICENSE_BSD  LICENSE_ISC  LICENSE_MIT  Makefile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  pyrefly.toml  renovate.json  run.sh
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: docker-publish.yml  main.yml  on-release-main.yml  validate-codecov-config.yml
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/scripts/: run-varlock.sh  run_varlock.sh
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  _version.py  app.py  configuration.py  container.py  foo.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/models/: __init__.py  error_codes.py  error_response.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/routers/: __init__.py  example_router.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/services/: __init__.py  azure_service.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  auth.py  auth_settings.py  cancel_on_disconnect.py  configuration.py  router_utils.py  usage_tracking.py
{{cookiecutter.project_name}}/tests/: test_foo.py
