[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "Data Competence Center Basel-Stadt", email = "dcc@bs.ch"},
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}
]
readme = "README.md"
keywords = ['python', 'fastapi']
requires-python = ">=3.13"
license = "{{cookiecutter.open_source_license}}"
license-files = ["LICEN[CS]E*"]
dependencies = [
{% if cookiecutter.use_pydantic_ai == "y" %}
    "dcc-backend-common[pydantic_ai]>=0.1.4",
{% else %}
    "dcc-backend-common>=0.1.4",
{% endif %}
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.115.0",
    "structlog>=25.1.0",
    "python-dotenv>=1.0.1",
    "returns>=0.26.0",
{% if cookiecutter.use_pydantic_ai == "y" %}
    "logfire>=4.22.0",
{% endif %}
{% if cookiecutter.use_azure_auth == "y" %}
    "fastapi-azure-auth>=5.2.0",
    "python-jose[cryptography]>=3.5.0",
{% endif %}
]

[project.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[project.optional-dependencies]
dev = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.13",
    "version-pioneer>=0.0.13",
    "ty>=0.0.12",
{% if cookiecutter.mkdocs == 'y' %}
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
{% endif %}
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.13",
    "version-pioneer>=0.0.13",
    "ty>=0.0.12",
{% if cookiecutter.mkdocs == 'y' %}
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
{% endif %}
]

[build-system]
requires = ["hatchling", "version-pioneer>=0.0.13"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "version-pioneer"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[tool.uv.sources]
dcc-backend-common = { git = "https://github.com/DCC-BS/backend-common" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

ignore = [
    "E501",  # LineTooLong
    "E731",  # DoNotAssignLambda
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

{% if cookiecutter.codecov == "y" %}
[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/.venv/*"
]
skip_empty = true
exclude_lines = [
    "raise NotImplementedError",
    "raise NotImplemented",
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "@(abc\\.)?abstractproperty"
]
{% endif %}
